sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:3: error: not found: value estRange
while(estRange = 1)
      ^AlgCocktailSort1:5: error: not found: value estRange
	estRange = 0
        ^AlgCocktailSort1:12: error: not found: value estRange
		estRange = 1
                ^AlgCocktailSort1:21: error: not found: value estRange
		estRange = 1
                ^