sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
while(estRange = 1)
{
	estRange = 0
	for(i <- getNombreValeurs()-2 to 0 by -1)
	{
		if(getValeur(i) < getValeur(i+1))
		{
		echange(i,i+1)	
		}
		estRange = 1
	}

	for( i<- 0 to getNombreValeurs()-2 )
	{
		if(getValeur(i) > getValeur(i+1))
		{
		echange(i,i+1)		
		}
		estRange = 1
	}

}


}
